# example-package-riri

./: README.md  pyproject.toml
src/example_package_riri/: rescale.py
tests/: test_rescale.py
